--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
-    "openai": "^3.3.0",
-    "socket.io": "^4.7.0"
+    "openai": "^3.3.0"
   }
 }
